feat: make trap drosera compliant
This commit addresses the feedback from the Drosera team to make the trap compliant with the Drosera protocol.

The following changes were made:
- Removed constructor from NFTWashTradeSentinel.sol and hardcoded the NFT address.
- Fixed the sample ordering in the shouldRespond function.
- Simplified the collect function to only return the owner address.
- Changed the response function in NFTWashTradeResponse.sol to execute(bytes).
- Updated drosera.toml to point to the new response function.
- Updated README.md to reflect the new trap logic.
- Updated tests to be compatible with the new changes.

--- a/drosera.toml
+++ b/drosera.toml
@@ -21,7 +21,7 @@ path = "out/NFTWashTradeSentinel.sol/NFTWashTradeSentinel.json"
 response_contract = "0x..."
 
 # Signature of the function to call on the response contract.
-response_function = "raiseAlert(address,bytes)"
+response_function = "execute(bytes)"
 
 # --- Trap Parameters ---
 # The minimum number of blocks to wait between triggering the same trap.
